# zed-editor

./: Cargo.toml  debug_undo.rs  test_newlines.sh
src/: lib.rs  main.rs
src/buffer/: buffer.rs  line_cache.rs  line_cache_simple.rs  line_index.rs  mod.rs  offset.rs  point.rs
src/editor/: editor.rs  mod.rs  multi_cursor.rs  selection.rs
src/formatter/: config.rs  formatter.rs  mod.rs
src/formatter/providers/: mod.rs  prettier.rs  rustfmt.rs
src/gui/: app.rs  mod.rs  theme.rs  viewport_renderer.rs
src/history/: history.rs  mod.rs  transaction.rs
src/io/: mmap_reader.rs  mod.rs  reader.rs  streaming.rs  writer.rs
src/rope/: chunk.rs  metrics.rs  mod.rs  rope.rs
src/syntax/: highlighter.rs  indent.rs  instant_highlighter.rs  languages.rs  mod.rs  theme.rs
src/syntax/queries/javascript/: highlights.scm  indents.scm
src/syntax/queries/python/: highlights.scm  indents.scm
src/syntax/queries/rust/: highlights.scm  indents.scm
src/tree/: cursor.rs  mod.rs  sum_tree.rs  summary.rs
src/ui/: app.rs  mod.rs  renderer.rs  terminal.rs
tests/: buffer_tests.rs  editor_tests.rs  newline_tests.rs  rope_tests.rs  sum_tree_tests.rs
