[package]
name = "zed-text-editor"
version = "0.1.0"
edition = "2021"

[lib]
name = "zed_text_editor"
path = "src/lib.rs"

[[bin]]
name = "zed-text-editor"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "src/bin/tui.rs"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[dependencies]
# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"

# GUI dependencies
eframe = "0.29"
egui = "0.29"
rfd = "0.15"    # Native file dialogs
memmap2 = "0.9"

serde = { version = "1.0", features = ["derive"] }
regex = "1.10"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-highlight = "0.22"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "rope_bench"
harness = false
